Added decompiled code and changed the main run file

--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.ccfea.ASMObserverJAS</mainClass>
+                                    <mainClass>com.ccfea.StartASM</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
