Added data download option to windows

--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,9 @@
                         <filter>
                             <artifact>com.ccfea:jas-library</artifact>
                             <excludes>
-                                <exclude>META-INF/MANIFEST.MF</exclude>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
                             </excludes>
                         </filter>
                     </filters>
